--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "color-convert": "^2.0.1",
     "expo": "~51.0.9",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.12.2",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-svg": "^7.2.1",
-    "react-native-svg-charts": "^5.4.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.2.0",
+    "react-native-vector-icons": "^10.1.0",
+    "uninstall": "^0.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
